committing to a fork

--- a/2_Seq2Seq/RNNs... and a lot more-SOLUTIONS.ipynb
+++ b/2_Seq2Seq/RNNs... and a lot more-SOLUTIONS.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,9 +102,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train.fields: {'text': <torchtext.data.field.Field object at 0x117e79c10>, 'label': <torchtext.data.field.LabelField object at 0x11a425d50>}\n",
+      "len(train): 8544\n",
+      "vars(train[0]): {'text': ['the', 'rock', 'is', 'destined', 'to', 'be', 'the', '21st', 'century', \"'s\", 'new', '`', '`', 'conan', \"''\", 'and', 'that', 'he', \"'s\", 'going', 'to', 'make', 'a', 'splash', 'even', 'greater', 'than', 'arnold', 'schwarzenegger', ',', 'jean', '-', 'claud', 'van', 'damme', 'or', 'steven', 'segal', '.'], 'label': 'positive'}\n"
+     ]
+    }
+   ],
    "source": [
     "# With TorchText Field we define how our data will be processed: here we will use Spacy for tokenisation\n",
     "\n",
@@ -127,9 +137,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Text Vocabulary Length 15480\n",
+      "Label Vocabulary Length:  3\n",
+      "[('.', 8041), ('the', 7353), (',', 7131), ('a', 5305), ('and', 4516), ('of', 4456), ('to', 3050), ('-', 2739), ('is', 2565), (\"'s\", 2544), ('it', 2428), ('that', 1955), ('in', 1916), ('as', 1299), ('but', 1172), ('film', 1166), ('with', 1139), ('for', 1037), ('movie', 1016), ('this', 998)]\n",
+      "defaultdict(None, {'positive': 0, 'negative': 1, 'neutral': 2})\n"
+     ]
+    }
+   ],
    "source": [
     "# Now we build a vocabulary out of tokens available from the pre-trained embedding list and the vocabulary of labels.\n",
     "\n",
@@ -150,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,9 +196,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<torchtext.data.iterator.BucketIterator object at 0x13c2f7350>\n",
+      "\n",
+      "[torchtext.data.batch.Batch of size 64 from SST]\n",
+      "\t[.text]:[torch.LongTensor of size 18x64]\n",
+      "\t[.label]:[torch.LongTensor of size 64]\n",
+      "\n",
+      "Demo batch `text` shape: torch.Size([18, 64])\n",
+      "Demo batch `text` transpose shape: torch.Size([64, 18])\n",
+      "Demo batch `text` sample: \n",
+      " tensor([[    3,   150,    35,     5,   250,    71,     4,    16,   438,  9137,\n",
+      "            35,    78,  2030,    19,   154,  8627,  2814,     2],\n",
+      "        [   87,    24,   453,    48,     5, 14822,     9,   677, 10262, 13634,\n",
+      "           169,     5,  2060,    14,     5,  1451,    69,   107],\n",
+      "        [ 2470,     6,    39,    70,    36,  4660,    39,  1078,  3967,     4,\n",
+      "          2205,  1336,   868,  8146,    14,    23,  9723,     2]])\n",
+      "\n",
+      "Demo batch `label` shape: torch.Size([64])\n",
+      "Demo batch `label` sample: tensor([2, 2, 1])\n"
+     ]
+    }
+   ],
    "source": [
     "print(train_iterator)\n",
     "\n",
@@ -218,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,18 +532,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 01 | Epoch Time: 0m 1s\n",
+      "\tTrain Loss: 1.022 | Train Acc: 49.37%\n",
+      "\t Val. Loss: 1.028 |  Val. Acc: 50.47%\n",
+      "Epoch: 02 | Epoch Time: 0m 1s\n",
+      "\tTrain Loss: 0.981 | Train Acc: 54.61%\n",
+      "\t Val. Loss: 0.956 |  Val. Acc: 57.75%\n",
+      "Epoch: 03 | Epoch Time: 0m 1s\n",
+      "\tTrain Loss: 0.978 | Train Acc: 54.90%\n",
+      "\t Val. Loss: 0.959 |  Val. Acc: 57.59%\n",
+      "Epoch: 04 | Epoch Time: 0m 1s\n",
+      "\tTrain Loss: 0.981 | Train Acc: 54.15%\n",
+      "\t Val. Loss: 1.017 |  Val. Acc: 50.83%\n",
+      "Epoch: 05 | Epoch Time: 0m 1s\n",
+      "\tTrain Loss: 0.976 | Train Acc: 55.12%\n",
+      "\t Val. Loss: 0.952 |  Val. Acc: 57.67%\n",
+      "Epoch: 06 | Epoch Time: 0m 1s\n",
+      "\tTrain Loss: 0.969 | Train Acc: 55.82%\n",
+      "\t Val. Loss: 0.966 |  Val. Acc: 56.20%\n",
+      "Epoch: 07 | Epoch Time: 0m 1s\n",
+      "\tTrain Loss: 0.973 | Train Acc: 55.05%\n",
+      "\t Val. Loss: 0.958 |  Val. Acc: 56.64%\n",
+      "Epoch: 08 | Epoch Time: 0m 1s\n",
+      "\tTrain Loss: 0.967 | Train Acc: 55.80%\n",
+      "\t Val. Loss: 0.960 |  Val. Acc: 56.74%\n",
+      "Epoch: 09 | Epoch Time: 0m 1s\n",
+      "\tTrain Loss: 0.960 | Train Acc: 55.88%\n",
+      "\t Val. Loss: 1.074 |  Val. Acc: 49.09%\n",
+      "Epoch: 10 | Epoch Time: 0m 1s\n",
+      "\tTrain Loss: 0.977 | Train Acc: 55.08%\n",
+      "\t Val. Loss: 1.022 |  Val. Acc: 55.42%\n",
+      "Epoch: 11 | Epoch Time: 0m 1s\n",
+      "\tTrain Loss: 0.981 | Train Acc: 54.45%\n",
+      "\t Val. Loss: 0.958 |  Val. Acc: 56.62%\n",
+      "Epoch: 12 | Epoch Time: 0m 1s\n",
+      "\tTrain Loss: 0.965 | Train Acc: 55.59%\n",
+      "\t Val. Loss: 0.952 |  Val. Acc: 57.00%\n",
+      "Epoch: 13 | Epoch Time: 0m 1s\n",
+      "\tTrain Loss: 0.955 | Train Acc: 56.31%\n",
+      "\t Val. Loss: 0.947 |  Val. Acc: 57.60%\n",
+      "Epoch: 14 | Epoch Time: 0m 1s\n",
+      "\tTrain Loss: 0.990 | Train Acc: 52.17%\n",
+      "\t Val. Loss: 0.968 |  Val. Acc: 56.74%\n",
+      "Epoch: 15 | Epoch Time: 0m 1s\n",
+      "\tTrain Loss: 0.970 | Train Acc: 55.43%\n",
+      "\t Val. Loss: 0.948 |  Val. Acc: 57.60%\n"
+     ]
+    }
+   ],
    "source": [
     "train(model, train_iterator, valid_iterator, optimizer, criterion)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Loss: 0.920 | Test Acc: 59.95%\n"
+     ]
+    }
+   ],
    "source": [
     "test_loss, test_acc = evaluate(model, test_iterator, criterion)\n",
     "\n",
@@ -527,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,23 +645,84 @@
     "            OUTPUT_DIM,\n",
     "            BIDIRECTIONAL, \n",
     "            DROPOUT, \n",
-    "            PAD_IDX)"
+    "            PAD_IDX)\n",
+    "optimizer = optim.Adam(bidirectional_model.parameters())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 01 | Epoch Time: 0m 2s\n",
+      "\tTrain Loss: 1.019 | Train Acc: 48.90%\n",
+      "\t Val. Loss: 0.963 |  Val. Acc: 53.69%\n",
+      "Epoch: 02 | Epoch Time: 0m 2s\n",
+      "\tTrain Loss: 0.960 | Train Acc: 55.07%\n",
+      "\t Val. Loss: 0.941 |  Val. Acc: 56.97%\n",
+      "Epoch: 03 | Epoch Time: 0m 2s\n",
+      "\tTrain Loss: 0.955 | Train Acc: 56.25%\n",
+      "\t Val. Loss: 0.931 |  Val. Acc: 58.29%\n",
+      "Epoch: 04 | Epoch Time: 0m 2s\n",
+      "\tTrain Loss: 0.947 | Train Acc: 56.20%\n",
+      "\t Val. Loss: 0.969 |  Val. Acc: 54.29%\n",
+      "Epoch: 05 | Epoch Time: 0m 2s\n",
+      "\tTrain Loss: 0.948 | Train Acc: 55.83%\n",
+      "\t Val. Loss: 0.957 |  Val. Acc: 55.32%\n",
+      "Epoch: 06 | Epoch Time: 0m 2s\n",
+      "\tTrain Loss: 0.942 | Train Acc: 56.54%\n",
+      "\t Val. Loss: 0.941 |  Val. Acc: 56.98%\n",
+      "Epoch: 07 | Epoch Time: 0m 2s\n",
+      "\tTrain Loss: 0.943 | Train Acc: 56.46%\n",
+      "\t Val. Loss: 0.927 |  Val. Acc: 57.67%\n",
+      "Epoch: 08 | Epoch Time: 0m 2s\n",
+      "\tTrain Loss: 0.934 | Train Acc: 56.82%\n",
+      "\t Val. Loss: 0.926 |  Val. Acc: 58.09%\n",
+      "Epoch: 09 | Epoch Time: 0m 2s\n",
+      "\tTrain Loss: 0.932 | Train Acc: 57.28%\n",
+      "\t Val. Loss: 0.932 |  Val. Acc: 58.97%\n",
+      "Epoch: 10 | Epoch Time: 0m 2s\n",
+      "\tTrain Loss: 0.927 | Train Acc: 57.05%\n",
+      "\t Val. Loss: 0.935 |  Val. Acc: 57.67%\n",
+      "Epoch: 11 | Epoch Time: 0m 2s\n",
+      "\tTrain Loss: 0.930 | Train Acc: 57.40%\n",
+      "\t Val. Loss: 0.945 |  Val. Acc: 57.76%\n",
+      "Epoch: 12 | Epoch Time: 0m 2s\n",
+      "\tTrain Loss: 0.931 | Train Acc: 57.04%\n",
+      "\t Val. Loss: 0.949 |  Val. Acc: 58.20%\n",
+      "Epoch: 13 | Epoch Time: 0m 2s\n",
+      "\tTrain Loss: 0.919 | Train Acc: 57.91%\n",
+      "\t Val. Loss: 0.931 |  Val. Acc: 57.83%\n",
+      "Epoch: 14 | Epoch Time: 0m 2s\n",
+      "\tTrain Loss: 0.925 | Train Acc: 57.49%\n",
+      "\t Val. Loss: 0.952 |  Val. Acc: 56.97%\n",
+      "Epoch: 15 | Epoch Time: 0m 2s\n",
+      "\tTrain Loss: 0.915 | Train Acc: 57.93%\n",
+      "\t Val. Loss: 0.944 |  Val. Acc: 55.84%\n"
+     ]
+    }
+   ],
    "source": [
     "train(bidirectional_model, train_iterator, valid_iterator, optimizer, criterion)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Loss: 0.928 | Test Acc: 56.03%\n"
+     ]
+    }
+   ],
    "source": [
     "test_loss, test_acc = evaluate(bidirectional_model, test_iterator, criterion)\n",
     "\n",
@@ -917,7 +1084,7 @@
     "    # we initialise the first hidden state with zeros\n",
     "    prev_hidden = torch.zeros(1, BATCH_SIZE, HIDDEN_DIM, device=device)\n",
     "    if is_lstm:\n",
-    "        prev_ht = torch.zeros(1, BATCH_SIZE, HIDDEN_DIM, device=device)\n",
+    "        prev_ht = torch.zeros(1, BATCH_SIZE, HIDDEN_DIM, device=device) # Andrea's note: 1 is layer*direction, 1*1 (this is not bi-directional) (could have understood wrong)\n",
     "        prev_ct = torch.zeros(1, BATCH_SIZE, HIDDEN_DIM, device=device)\n",
     "        prev_hidden = (prev_ht, prev_ct)\n",
     "\n",
@@ -1837,9 +2004,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.6 64-bit",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37664biteff876fa6de145f1a297d7949827781d"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1851,7 +2018,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
